WIP: Add navigation. This commit adds the compass

--- a/tables_app/src/main/res/menu/top_level_table_menu.xml
+++ b/tables_app/src/main/res/menu/top_level_table_menu.xml
@@ -27,6 +27,9 @@
                 <item
                         android:id="@+id/top_level_table_menu_view_map_view"
                         android:title="@string/map"/>
+                <item
+                        android:id="@+id/top_level_table_menu_view_navigate_view"
+                        android:title="@string/navigate"/>
             </group>
         </menu>
     </item>
