--- a/tables_app/src/main/res/layout/navigate_fragment.xml
+++ b/tables_app/src/main/res/layout/navigate_fragment.xml
@@ -4,16 +4,131 @@
               android:layout_height="fill_parent"
               android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
             android:id="@+id/navigate"
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@color/Beige"
-            android:orientation="horizontal"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/item_background_state"
+            android:padding="10dp" >
+
+    <FrameLayout
+            android:id="@+id/compassContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:paddingRight="10dp" >
+
+        <org.opendatakit.tables.views.CompassView
+                android:id="@+id/compass"
+                android:layout_width="@dimen/compass_width"
+                android:layout_height="@dimen/compass_height"
+                android:src="@drawable/compass" />
+
+        <org.opendatakit.tables.views.CompassView
+                android:id="@+id/censusLocation"
+                android:layout_width="@dimen/compass_width"
+                android:layout_height="@dimen/compass_height"
+                android:src="@drawable/census_bearing"
+                android:visibility="gone" />
+
+        <org.opendatakit.tables.views.CompassView
+                android:layout_width="@dimen/compass_width"
+                android:layout_height="@dimen/compass_height"
+                android:src="@drawable/compass_heading" />
+    </FrameLayout>
 
     <LinearLayout
-            android:id="@+id/map_view_inner_map"
+            android:id="@+id/distanceContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/compassContainer"
+            android:orientation="vertical" >
+
+        <TextView
+                android:id="@+id/distanceTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/dark_blue"
+                android:textSize="@dimen/nav_text_size"
+                android:textStyle="bold" />
+
+        <TextView
+                android:id="@+id/finalizedTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textColor="@color/dark_blue"
+                android:textSize="@dimen/nav_text_size_small"
+                android:textStyle="bold" />
+        <TextView
+                android:id="@+id/incompleteTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:textColor="@color/dark_blue"
+                android:textSize="@dimen/nav_text_size_small"
+                android:textStyle="bold" />
+        <TextView
+                android:id="@+id/notStartedTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:textColor="@color/dark_blue"
+                android:textSize="@dimen/nav_text_size_small"
+                android:textStyle="bold" />
+    </LinearLayout>
+        <RelativeLayout
+                android:id="@+id/gpsContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/distanceContainer"
+                android:layout_marginTop="10dp"
+                android:layout_toRightOf="@id/compassContainer" >
+
+            <!--
+            <com.todddavies.components.progressbar.ProgressWheel
+                    android:id="@+id/signalQualitySpinner"
+                    android:layout_width="@dimen/small_signal_quality_progress_wheel_width"
+                    android:layout_height="@dimen/small_signal_quality_progress_wheel_height"
+                    ProgressWheel:barColor="#2E9121"
+                    ProgressWheel:barLen="@dimen/small_signal_quality_progress_wheel_bar_length"
+                    ProgressWheel:barWidth="@dimen/small_signal_quality_progress_wheel_bar_width"
+                    ProgressWheel:rimColor="#332E9121"
+                    ProgressWheel:rimWidth="1dp"
+                    ProgressWheel:text="@string/acc_value"
+                    ProgressWheel:textColor="#2E9121"
+                    ProgressWheel:textSize="@dimen/small_signal_quality_progress_wheel_text_size" />
+-->
+            <LinearLayout
+                    android:id="@+id/directionContainer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical" >
+                <!--android:layout_toRightOf="@id/signalQualitySpinner" -->
+
+                <TextView
+                        android:id="@+id/headingTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/dark_blue"
+                        android:textSize="@dimen/nav_text_size_small"
+                        android:textStyle="bold" />
+
+                <TextView
+                        android:id="@+id/bearingTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/dark_blue"
+                        android:textSize="@dimen/nav_text_size_small"
+                        android:textStyle="bold" />
+            </LinearLayout>
+        </RelativeLayout>
+    </RelativeLayout>
+
+    <LinearLayout
+            android:id="@+id/navigate_view_inner_map"
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
